crates/tests/libs/bindgen/data/error/fn_opt_with_args/input.rdl

#[win32]
mod Test {
    #[library("lib")]
    extern fn F(#[opt(42)] value: i32);
}
        